Fix image jump on load in index page

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -5,6 +5,7 @@
 }
 
 .flipper {
+  height: 100%;
   transition: 1s;
   transform-style: preserve-3d;
   position: relative;
@@ -15,6 +16,12 @@
 }
 
 .front, .back {
+  // width: 100%;
+  // height: 100%;
+ // had to set these to pixel value
+ // so the image would not get cut off
+  width: 440px;
+  height: 530px;
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -53,7 +60,8 @@
   }
   
   .hero-section{
-    height: 422px;
+    height: 530px;
+    width: 400px;
     margin-bottom: 30px;
     h2 {
       color: white;
@@ -68,9 +76,9 @@
   
     &-content {
       position: absolute;
-      bottom: 20px;
-      width: 360px;
-      left: 6%;
+      bottom: 0;
+      width: 100%;
+      padding: 20px;
       z-index: 1;
   
       &-intro {
@@ -81,14 +89,28 @@
   
   
   .image {
-    width: auto;
-    max-width: 100%;
+    // width: 440px;
+    // height: 530px;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repat;
+    background-position: center;
   }
+  
+  .image-1 {
+    background-image: url('/images/Icon-02.jpg');
+  }
+  
+  .image-2 {
+    background-image: url('/images/Icon-02.jpg');
+  }
+  
+  
   
   .hero-welcome-text > h1 {
     color: white;
     text-transform: uppercase;
-    font-size: 27px;
+    font-size: 32px;
     margin-top: 80px;
   }
   
@@ -106,6 +128,10 @@
       }
     }
   }
+
+  .hero-welcome-bio > h1 {
+   font-size: 1.80rem;
+  }
   
   .hero-welcome-wrapper {
     justify-content: flex-end;
@@ -114,9 +140,10 @@
 
   @media (max-width: 850px) {
     .hero-section {
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 0;
+      margin-right: 0;
     }
+
   }
   
   // @media (max-width: 500px) {
@@ -125,13 +152,14 @@
   //   }
   // }
   
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     .hero-section {
-      width: 341px;
+      // width: 330px;
   
-      &-content {
-        width: 341px;
-      }
+      // &-content {
+      //   width: 330px;
+      // }
+      width: 400px;
     }
   
     .hero-welcome-text > h1 {
@@ -161,7 +189,7 @@
   }
   
   .shadow-custom-orange {
-    border: 2px solid #f37d49;
     box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
+    order: 2px solid #d9c9f8;
   }
   
