--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,7 +40,7 @@ html, body {
   }
 
 .self_typed {
-    font-size: 31px;
+    font-size: 32px;
     color: white;
     font-weight: bold;
     letter-spacing: 2px;
